# cosmo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: NoInSourceBuilds.cmake  Testing.cmake
include/: cosmo.hpp
scripts/: concurrent_read_latencies.txt  concurrent_write_latencies256KB.txt  concurrent_write_latencies64KB.txt  seq_read_latencies.txt  seq_write_latencies16KB.txt  seq_write_latencies256KB.txt  seq_write_latencies64KB.txt  stats_write.py
src/: cosmo.cpp
src/io/: basic_storage_io.hpp  io_utils.cpp  io_utils.hpp  storage.cpp  storage.hpp  storage_io.hpp
src/storage/: storage.cpp  storage.hpp
src/storage/storage_strategy/: basic_storage_strategy.hpp  buffered_storage_strategy.hpp  storage_strategy.hpp
src/storage/utils/: storage_utils.cpp  storage_utils.hpp
tests/: CMakeLists.txt  storage_test.cpp  test_utils.hpp
